feat: bunch of changes

--- a/Cursor/User/settings.json
+++ b/Cursor/User/settings.json
@@ -2,7 +2,7 @@
   "window.zoomLevel": 0,
   "editor.fontFamily": "Zed Sans",
   "terminal.integrated.fontFamily": "ZedMono Nerd Font",
-  "editor.fontSize": 13,
+  "editor.fontSize": 12.5,
   "terminal.integrated.fontSize": 13,
   "editor.fontLigatures": true,
   "editor.inlineSuggest.enabled": true,
@@ -92,30 +92,32 @@
   "workbench.activityBar.location": "hidden",
   "workbench.sideBar.location": "right",
   "terminal.integrated.scrollback": 50000,
+  "workbench.startupEditor": "none",
+  "diffEditor.useInlineViewWhenSpaceIsLimited": false,
   "workbench.colorTheme": "Tomorrow Night Blue",
   "workbench.colorCustomizations": {
-    "editor.background": "#261230",
-    "activityBar.background": "#261230",
-    "statusBar.background": "#261230",
-    "sideBar.background": "#261230",
-    "tab.inactiveBackground": "#261230",
-    "tab.border": "#261230",
-    "editorOverviewRuler.border": "#261230",
-    "editorGroupHeader.tabsBackground": "#261230",
-    "menu.background": "#261230",
-    "input.background": "#261230",
-    "editorSuggestWidget.background": "#261230",
-    "editorSuggestWidget.border": "#261230",
-    "scrollbar.shadow": "#261230",
-    "scrollbarSlider.background": "#261230",
-    "scrollbarSlider.activeBackground": "#261230",
-    "scrollbarSlider.hoverBackground": "#261230",
-    "titleBar.activeBackground": "#261230",
-    "editorSuggestWidget.selectedBackground": "#261230",
-    "quickInput.background": "#261230",
-    "editor.selectionBackground": "#0f0215",
-    "editor.lineHighlightBackground": "#0f0215",
-    "editorHoverWidget.background": "#0f0215",
+    "editor.background": "#221124",
+    "activityBar.background": "#221124",
+    "statusBar.background": "#221124",
+    "sideBar.background": "#221124",
+    "tab.inactiveBackground": "#221124",
+    "tab.border": "#221124",
+    "editorOverviewRuler.border": "#221124",
+    "editorGroupHeader.tabsBackground": "#221124",
+    "menu.background": "#221124",
+    "input.background": "#221124",
+    "editorSuggestWidget.background": "#221124",
+    "editorSuggestWidget.border": "#221124",
+    "scrollbar.shadow": "#221124",
+    "scrollbarSlider.background": "#221124",
+    "scrollbarSlider.activeBackground": "#221124",
+    "scrollbarSlider.hoverBackground": "#221124",
+    "titleBar.activeBackground": "#221124",
+    "editorSuggestWidget.selectedBackground": "#221124",
+    "quickInput.background": "#221124",
+    "editor.selectionBackground": "#1A0E20",
+    "editor.lineHighlightBackground": "#1A0E20",
+    "editorHoverWidget.background": "#1A0E20",
     "editorSuggestWidget.selectedForeground": "#6a6367",
     "tab.inactiveForeground": "#6a6367"
   },
@@ -126,8 +128,6 @@
     "-window.zoomLevel",
     "window.zoomPerWindow"
   ],
-  "workbench.startupEditor": "none",
-  "diffEditor.useInlineViewWhenSpaceIsLimited": false,
   "terminal.integrated.tabs.enabled": false,
   "roo-cline.allowedCommands": [
     "git log",
