--- a/vivaldi-stable.conf
+++ b/vivaldi-stable.conf
@@ -1,15 +1,12 @@
+# wayland
 --ozone-platform=wayland
-# Enable Wayland Input Method Editor support
 --enable-wayland-ime
 --wayland-text-input-version=3
 
-# --- GPU Acceleration & Performance ---
-# Ignore GPU blocklist (use with caution as noted in ArchWiki)
 --ignore-gpu-blocklist
-# Enable zero-copy texture uploads
 --enable-zero-copy
-# Force GPU rasterization for better performance
 --force-gpu-rasterization
+--enable-unsafe-webgpu
 
 # --- Hardware Video Acceleration (VA-API) & Vulkan Rendering for AMD ---
 # This set of features is crucial for leveraging your AMD 7800XT for video
