--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,13 +1,19 @@
-# Set wayland display
-exec-once = systemctl --user import-environment
-exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+# non-systemd
+exec-once = dbus-update-activation-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
-# Hardware
 monitor=,highrr,0x0,1.5
-env = XCURSOR_SIZE,18
+
+# remove X11 fallbacks
+env = GDK_BACKEND,wayland
+env = QT_QPA_PLATFORM,wayland
+env = SDL_VIDEODRIVER,wayland
+env = CLUTTER_BACKEND,wayland
+env = MOZ_ENABLE_WAYLAND,1
+
+env = HYPRCURSOR_THEME,Bibata-Modern-Amber
+env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
-# Wallpaper and notifications
 exec-once = hyprpaper
 exec-once = mako
 
@@ -16,19 +22,18 @@ exec-once = pipewire
 exec-once = pipewire-pulse
 exec-once = wireplumber
 
+# Stupid xwayland
 xwayland {
     enabled = false
 }
 
 general {
+    layout = master
     gaps_in = 4
     gaps_out = 8
     border_size = 2
-    col.active_border = rgb(FFCCDD) rgb(BE26BE) 45deg
+    col.active_border = rgb(FFCCDD) rgb(FF338F) 45deg
     col.inactive_border = rgb(362e45)
-
-    layout = master
-
     allow_tearing = false
 }
 
@@ -38,82 +43,59 @@ input {
     kb_model =
     kb_options =
     kb_rules =
-
     follow_mouse = 1
     float_switch_override_focus = 2
-
     sensitivity = 0.6
     repeat_rate = 28
     repeat_delay = 500
 }
 
 cursor {
-    inactive_timeout = 3
+    inactive_timeout = 5
     persistent_warps = true
 }
 
 decoration {
-    rounding = 12
-    rounding_power = 2
-
-    active_opacity = 1
-    inactive_opacity = 1
-    fullscreen_opacity = 1
+    rounding = 10
+    active_opacity = 0.99
+    inactive_opacity = 0.98
+    fullscreen_opacity = 0.99
 
     blur {
-        enabled = false
-        size = 3
-        passes = 1
+        enabled = true
+        size = 12
+        passes = 6
+        new_optimizations = on
+        ignore_opacity = true
         xray = true
-        new_optimizations = true
-        vibrancy = 0.1696
+    }
+
+    shadow {
+        enabled = true
+        range = 30
+        render_power = 3
+        color = 0x66000000
     }
 }
 
 animations {
-    enabled = yes
-    
-    # Define some Bézier curves for smoother or more dynamic effects
-    # 'smoothOut' starts fast, eases out smoothly
-    bezier = smoothOut, 0.36, 0, 0.66, -0.36 # Example, adjust control points as needed
-    # 'overshot' adds a slight overshoot effect, can feel 'bouncy'
-    bezier = overshot, 0.4, 1.1, 0.6, 1 # Example, adjust control points as needed
-    # 'easeOutCirc' provides a smooth circular deceleration
+    enabled = true
+    bezier = linear, 0, 0, 1, 1
+    bezier = md3_standard, 0.2, 0, 0, 1
+    bezier = md3_decel, 0.05, 0.7, 0.1, 1
+    bezier = md3_accel, 0.3, 0, 0.8, 0.15
+    bezier = overshot, 0.05, 0.9, 0.1, 1.1
+    bezier = crazyshot, 0.1, 1.5, 0.76, 0.92
+    bezier = hyprnostretch, 0.05, 0.9, 0.1, 1.0
+    bezier = fluent_decel, 0.1, 1, 0, 1
+    bezier = easeInOutCirc, 0.85, 0, 0.15, 1
     bezier = easeOutCirc, 0, 0.55, 0.45, 1
-    # Keep your original 'quart' if you like it
-    bezier = quart, 0.15, 1, 0.5, 1
-
-    # --- Tweaked Existing Animations ---
-
-    # Window open animation: Slightly longer duration for visibility, smoother curve, slide from bottom
-    animation = windowsIn, 1, 3, easeOutCirc, slidevert 5%
-    # Consider 'slide' or 'popin' if 'slidevert' isn't desired
-
-    # Window close animation: Using 'easeOutCirc' for smoothness, popin effect
-    animation = windowsOut, 1, 3, easeOutCirc, popin 80%
-    # Alternative: use 'slidevert -5%' for sliding out downwards
-
-    # Border animation: Subtle fade/color shift for active window border
-    animation = border, 1, 5, default
-    # Optional: Animate border angle change
-    # animation = borderangle, 1, 15, default, loop # Loops the gradient rotation
-
-    # Fade animation (for layers/popups): Slightly faster duration, smooth curve
-    animation = fade, 1, 3, easeOutCirc
-    # For fade In/Out specifically (e.g., for Waybar tooltips)
-    animation = fadeIn, 1, 3, easeOutCirc
-    animation = fadeOut, 1, 3, easeOutCirc
-
-    # Workspace switching: Using 'easeOutCirc' and 'slidefade' for a smoother transition
-    animation = workspaces, 1, 4, easeOutCirc, slidefade 10%
-    # Alternatives: 'slide', 'slidevert', 'fade' (adjust duration/curve accordingly)
-
-    # Special workspace (scratchpads): Faster, distinct animation like sliding from top
-    # Alternative: 'fade' or 'popin'
-
-    # Layer fading for menus/notifications (if applicable)
-    animation = fadeLayersIn, 1, 3, easeOutCirc
-    animation = fadeLayersOut, 1, 3, easeOutCirc
+    bezier = easeOutExpo, 0.16, 1, 0.3, 1
+    animation = windows, 1, 3, md3_decel, popin 60%
+    animation = border, 1, 10, default
+    animation = fade, 1, 2.5, md3_decel
+    animation = workspaces, 1, 3.5, easeOutExpo, slide
+    animation = specialWorkspace, 1, 3, md3_decel, slidevert
 }
 
 dwindle {
@@ -171,8 +153,8 @@ bind = $mainMod, l, workspace, 1
 bind = $mainMod, u, workspace, 2
 bind = $mainMod, y, workspace, 3
 bind = $mainMod, semicolon, workspace, 4
-bind = $mainMod, period, workspace, e+1
-bind = $mainMod, comma, workspace,e-1
+bind = $mainMod, period, workspace, +1
+bind = $mainMod, comma, workspace, -1
 
 # Move active window to a workspace with mainMod + CTRL + [0-9]
 bind = $mainMod CTRL, l,           movetoworkspace, 1
@@ -181,7 +163,7 @@ bind = $mainMod CTRL, y,           movetoworkspace, 3
 bind = $mainMod CTRL, semicolon,   movetoworkspace, 4
 bind = $mainMod CTRL, comma,       movetoworkspace, +1
 
-# same as above, but doesnt switch to the workspace
+# same as above without switching workspace
 #bind = $mainMod CTRL, l,         movetoworkspacesilent, 1
 #bind = $mainMod CTRL, u,         movetoworkspacesilent, 2
 #bind = $mainMod CTRL, y,         movetoworkspacesilent, 3
