chore: fix context7 mcp

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,8 +1,5 @@
-preload = ~/Pictures/Wallpapers/wall3.jpg
+preload = ~/Pictures/Wallpapers/download (6).jpeg
+wallpaper = DP-1,~/Pictures/Wallpapers/download (6).jpeg
 
-wallpaper = DP-1,~/Pictures/Wallpapers/wall3.jpg
-
-#enable splash text rendering over the wallpaper
 splash = false
-
 ipc = on
