--- a/xsettingsd/xsettingsd.conf
+++ b/xsettingsd/xsettingsd.conf
@@ -1,8 +1,8 @@
-Net/ThemeName "Dracula"
+Net/ThemeName "Adwaita"
 Net/IconThemeName "Adwaita"
-Gtk/CursorThemeName "Adwaita"
+Gtk/CursorThemeName "Bibata-Modern-Amber"
 Net/EnableEventSounds 1
-EnableInputFeedbackSounds 1
+EnableInputFeedbackSounds 0
 Xft/Antialias 1
 Xft/Hinting 0
 Xft/HintStyle "hintnone"
