chore: cursor keybinds

--- a/Cursor/User/settings.json
+++ b/Cursor/User/settings.json
@@ -96,28 +96,28 @@
   "diffEditor.useInlineViewWhenSpaceIsLimited": false,
   "workbench.colorTheme": "Tomorrow Night Blue",
   "workbench.colorCustomizations": {
-    "editor.background": "#221124",
-    "activityBar.background": "#221124",
-    "statusBar.background": "#221124",
-    "sideBar.background": "#221124",
-    "tab.inactiveBackground": "#221124",
-    "tab.border": "#221124",
-    "editorOverviewRuler.border": "#221124",
-    "editorGroupHeader.tabsBackground": "#221124",
-    "menu.background": "#221124",
-    "input.background": "#221124",
-    "editorSuggestWidget.background": "#221124",
-    "editorSuggestWidget.border": "#221124",
-    "scrollbar.shadow": "#221124",
-    "scrollbarSlider.background": "#221124",
-    "scrollbarSlider.activeBackground": "#221124",
-    "scrollbarSlider.hoverBackground": "#221124",
-    "titleBar.activeBackground": "#221124",
-    "editorSuggestWidget.selectedBackground": "#221124",
-    "quickInput.background": "#221124",
-    "editor.selectionBackground": "#1A0E20",
-    "editor.lineHighlightBackground": "#1A0E20",
-    "editorHoverWidget.background": "#1A0E20",
+    "editor.background": "#1D1B28",
+    "activityBar.background": "#1D1B28",
+    "statusBar.background": "#1D1B28",
+    "sideBar.background": "#1D1B28",
+    "tab.inactiveBackground": "#1D1B28",
+    "tab.border": "#1D1B28",
+    "editorOverviewRuler.border": "#1D1B28",
+    "editorGroupHeader.tabsBackground": "#1D1B28",
+    "menu.background": "#1D1B28",
+    "input.background": "#1D1B28",
+    "editorSuggestWidget.background": "#1D1B28",
+    "editorSuggestWidget.border": "#1D1B28",
+    "scrollbar.shadow": "#1D1B28",
+    "scrollbarSlider.background": "#1D1B28",
+    "scrollbarSlider.activeBackground": "#1D1B28",
+    "scrollbarSlider.hoverBackground": "#1D1B28",
+    "titleBar.activeBackground": "#1D1B28",
+    "editorSuggestWidget.selectedBackground": "#1D1B28",
+    "quickInput.background": "#1D1B28",
+    "editor.selectionBackground": "#110f1d",
+    "editor.lineHighlightBackground": "#110f1d",
+    "editorHoverWidget.background": "#110f1d",
     "editorSuggestWidget.selectedForeground": "#6a6367",
     "tab.inactiveForeground": "#6a6367"
   },
