--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -22,7 +22,7 @@ exec-once = pipewire
 exec-once = pipewire-pulse
 exec-once = wireplumber
 
-# Stupid xwayland
+# stupid xwayland
 xwayland {
     enabled = false
 }
@@ -39,10 +39,6 @@ general {
 
 input {
     kb_layout = us
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
     follow_mouse = 1
     float_switch_override_focus = 2
     sensitivity = 0.6
@@ -55,19 +51,40 @@ cursor {
     persistent_warps = true
 }
 
+dwindle {
+    force_split = 0
+    use_active_for_splits = true
+    pseudotile = true
+    preserve_split = true
+}
+
+master {
+    mfact = 0.48
+    special_scale_factor = 1.0
+}
+
+misc {
+    force_default_wallpaper = 0
+    disable_hyprland_logo = true
+    enable_swallow = true
+    swallow_regex =
+    vfr = 1
+}
+
 decoration {
     rounding = 10
-    active_opacity = 0.86
-    inactive_opacity = 0.86
-    fullscreen_opacity = 0.86
+    active_opacity = 0.93
+    inactive_opacity = 0.93
+    fullscreen_opacity = 0.93
 
     blur {
         enabled = true
-        size = 12
-        passes = 6
+        size = 2
+        passes = 2
         new_optimizations = on
         ignore_opacity = true
         xray = true
+        popups = true
     }
 
     shadow {
@@ -98,119 +115,21 @@ animations {
     animation = specialWorkspace, 1, 3, md3_decel, slidevert
 }
 
-dwindle {
-    force_split = 0
-    use_active_for_splits = true
-    pseudotile = true
-    preserve_split = true
-}
-
-master {
-    mfact = 0.48
-    special_scale_factor = 1.0
-}
-
-misc {
-    force_default_wallpaper = 0
-    disable_hyprland_logo = true
-    enable_swallow = true
-    swallow_regex =
-    vfr = 1
-}
-
-$mainMod = ALT
-
-binds {
-     workspace_back_and_forth = 0
-     allow_workspace_cycles = 0
-}
-
-bind = CTRL, RETURN, exec, wezterm
-bind = $mainMod, Q, killactive
-bind = $mainMod SHIFT, Q, exit
-bind = CTRL, SPACE, exec, wofi --show drun -I --width 28% --no-actions --prompt ""
-bind = $mainMod CTRL, SPACE, exec, wofi-emoji
-bind = $mainMod, F, fullscreen
-bind = $mainMod, SPACE, togglefloating
-
-bind=,XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -3%
-bind=,XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +3%
-bind=,XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
-
-# Move focus with mainMod + arrow keys
-bind = $mainMod, n, movefocus, l
-bind = $mainMod, e, movefocus, r
-bind = $mainMod, i, movefocus, u
-bind = $mainMod, o, movefocus, d
-
-bind = $mainMod CTRL, n, movewindow, l
-bind = $mainMod CTRL, e, movewindow, r
-bind = $mainMod CTRL, i, movewindow, u
-bind = $mainMod CTRL, o, movewindow, d
-
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, l, workspace, 1
-bind = $mainMod, u, workspace, 2
-bind = $mainMod, y, workspace, 3
-bind = $mainMod, semicolon, workspace, 4
-bind = $mainMod, period, workspace, +1
-bind = $mainMod, comma, workspace, -1
-
-# Move active window to a workspace with mainMod + CTRL + [0-9]
-bind = $mainMod CTRL, l,           movetoworkspace, 1
-bind = $mainMod CTRL, u,           movetoworkspace, 2
-bind = $mainMod CTRL, y,           movetoworkspace, 3
-bind = $mainMod CTRL, semicolon,   movetoworkspace, 4
-bind = $mainMod CTRL, comma,       movetoworkspace, +1
-
-# same as above without switching workspace
-#bind = $mainMod CTRL, l,         movetoworkspacesilent, 1
-#bind = $mainMod CTRL, u,         movetoworkspacesilent, 2
-#bind = $mainMod CTRL, y,         movetoworkspacesilent, 3
-#bind = $mainMod CTRL, semicolon, movetoworkspacesilent, 4
-
-bind = $mainMod,slash,workspace,previous
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-
-bind = $mainMod,R,submap,resize
-submap = resize
-binde =,right,resizeactive,15 0
-binde =,left,resizeactive,-15 0
-binde =,up,resizeactive,0 -15
-binde =,down,resizeactive,0 15
-binde =,l,resizeactive,15 0
-binde =,h,resizeactive,-15 0
-binde =,k,resizeactive,0 -15
-binde =,j,resizeactive,0 15
-bind =,escape,submap,reset
-submap = reset
-
-bind=$mainMod SHIFT, l, resizeactive, 15 0
-bind=$mainMod SHIFT, h, resizeactive,-15 0
-bind=$mainMod SHIFT, k, resizeactive, 0 -15
-bind=$mainMod SHIFT, j, resizeactive, 0 15
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
-
 # Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
-
-# Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrulev2 = suppressevent maximize, class:.*
 
 # Float Windows
 windowrulev2=float,class:^(firefox)$,title:^(Save File)$
 windowrulev2=float,class:^(firefox)$,title:^(Open File)$
 windowrulev2=float,class:^(blueman-manager)$
+windowrulev2=opacity 1.0,class:^(blueman-manager)$
 windowrulev2=float,class:^(org.pulseaudio.pavucontrol)$
 windowrulev2=opacity 1.0,class:^(org.pulseaudio.pavucontrol)$
-windowrule=float,title:^(Firefox — Sharing Indicator)$
-windowrule=float,title:^(Picture-in-Picture)$
+windowrulev2=float,title:^(Picture-in-Picture)$
+windowrulev2 = float, title:^(Open Files|Save File)$
+windowrulev2 = center, title:^(Open Files|Save File)$
 
 # Ignore borders when screenshots etc
 layerrule=noanim, selection
+
+source = ~/.config/hypr/keybinds.conf
