--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -16,6 +16,7 @@ env = HYPRCURSOR_SIZE,24
 
 exec-once = hyprpaper
 exec-once = mako
+exec-once = waybar
 
 # Hi-fi audio
 exec-once = pipewire
@@ -89,7 +90,7 @@ decoration {
 
     shadow {
         enabled = true
-        range = 30
+        range = 20
         render_power = 3
         color = 0x66000000
     }
@@ -119,8 +120,6 @@ animations {
 windowrulev2 = suppressevent maximize, class:.*
 
 # Float Windows
-windowrulev2=float,class:^(firefox)$,title:^(Save File)$
-windowrulev2=float,class:^(firefox)$,title:^(Open File)$
 windowrulev2=float,class:^(blueman-manager)$
 windowrulev2=opacity 1.0,class:^(blueman-manager)$
 windowrulev2=float,class:^(org.pulseaudio.pavucontrol)$
