--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -12,6 +12,7 @@ bind = CTRL, SPACE, exec, wofi --show drun -I --width 28% --no-actions --prompt 
 bind = $mainMod CTRL, SPACE, exec, wofi-emoji
 bind = $mainMod, F, fullscreen
 bind = $mainMod, SPACE, togglefloating
+bind = $mainMod SHIFT, U, exec, ~/.config/waybar/scripts/toggle_waybar.sh
 
 bind=,XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -3%
 bind=,XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +3%
@@ -33,6 +34,7 @@ bind = $mainMod, l, workspace, 1
 bind = $mainMod, u, workspace, 2
 bind = $mainMod, y, workspace, 3
 bind = $mainMod, semicolon, workspace, 4
+bind = $mainMod, 5, workspace, 5
 bind = $mainMod, period, workspace, +1
 bind = $mainMod, comma, workspace, -1
 
@@ -41,6 +43,7 @@ bind = $mainMod CTRL, l,           movetoworkspace, 1
 bind = $mainMod CTRL, u,           movetoworkspace, 2
 bind = $mainMod CTRL, y,           movetoworkspace, 3
 bind = $mainMod CTRL, semicolon,   movetoworkspace, 4
+bind = $mainMod CTRL, 5,           movetoworkspace, 5
 bind = $mainMod CTRL, comma,       movetoworkspace, +1
 
 # same as above without switching workspace
