style: waybar backs

--- a/Cursor/User/settings.json
+++ b/Cursor/User/settings.json
@@ -1,6 +1,6 @@
 {
   "window.zoomLevel": 0,
-  "editor.fontFamily": "Zed Sans",
+  "editor.fontFamily": "ZedMono Nerd Font",
   "terminal.integrated.fontFamily": "ZedMono Nerd Font",
   "editor.fontSize": 12.5,
   "terminal.integrated.fontSize": 13,
