--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -9,6 +9,9 @@ env = QT_QPA_PLATFORM,wayland
 env = SDL_VIDEODRIVER,wayland
 env = CLUTTER_BACKEND,wayland
 env = MOZ_ENABLE_WAYLAND,1
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
 
 env = HYPRCURSOR_THEME,Bibata-Modern-Amber
 env = XCURSOR_SIZE,24
@@ -74,14 +77,14 @@ misc {
 
 decoration {
     rounding = 10
-    active_opacity = 0.93
-    inactive_opacity = 0.93
-    fullscreen_opacity = 0.93
+    active_opacity = 0.95
+    inactive_opacity = 0.95
+    fullscreen_opacity = 1.0
 
     blur {
         enabled = true
-        size = 2
-        passes = 2
+        size = 1
+        passes = 4
         new_optimizations = on
         ignore_opacity = true
         xray = true
