--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,5 +1,5 @@
-preload = ~/Pictures/Wallpapers/download (6).jpeg
-wallpaper = DP-1,~/Pictures/Wallpapers/download (6).jpeg
+preload = ~/Pictures/Wallpapers/pastel-window-2.jpg
+wallpaper = DP-1,~/Pictures/Wallpapers/pastel-window-2.jpg
 
 splash = false
 ipc = on
