--- a/mako/config
+++ b/mako/config
@@ -1,14 +1,14 @@
 max-visible=2
 layer=overlay
-background-color=#221124
+background-color=#1A1526
 font=Funnel Sans 12
 text-color=#DFFFF8
 border-color=#FFCCDD
 border-radius=12
-max-icon-size=56
+max-icon-size=48
 default-timeout=5000
 anchor=top-right
 margin=6
-width=280
-height=180
-padding=8
+width=240
+height=160
+padding=6
