chore: coding agent creating internal todos

--- a/Cursor/User/settings.json
+++ b/Cursor/User/settings.json
@@ -2,8 +2,8 @@
   "window.zoomLevel": 0,
   "editor.fontFamily": "ZedMono Nerd Font",
   "terminal.integrated.fontFamily": "ZedMono Nerd Font",
-  "editor.fontSize": 12.5,
-  "terminal.integrated.fontSize": 13,
+  "editor.fontSize": 12,
+  "terminal.integrated.fontSize": 12,
   "editor.fontLigatures": true,
   "editor.inlineSuggest.enabled": true,
   "extensions.ignoreRecommendations": true,
@@ -96,25 +96,25 @@
   "diffEditor.useInlineViewWhenSpaceIsLimited": false,
   "workbench.colorTheme": "Tomorrow Night Blue",
   "workbench.colorCustomizations": {
-    "editor.background": "#1A1526",
-    "activityBar.background": "#1A1526",
-    "statusBar.background": "#1A1526",
-    "sideBar.background": "#1A1526",
-    "tab.inactiveBackground": "#1A1526",
-    "tab.border": "#1A1526",
-    "editorOverviewRuler.border": "#1A1526",
-    "editorGroupHeader.tabsBackground": "#1A1526",
-    "menu.background": "#1A1526",
-    "input.background": "#1A1526",
-    "editorSuggestWidget.background": "#1A1526",
-    "editorSuggestWidget.border": "#1A1526",
-    "scrollbar.shadow": "#1A1526",
-    "scrollbarSlider.background": "#1A1526",
-    "scrollbarSlider.activeBackground": "#1A1526",
-    "scrollbarSlider.hoverBackground": "#1A1526",
-    "titleBar.activeBackground": "#1A1526",
-    "editorSuggestWidget.selectedBackground": "#1A1526",
-    "quickInput.background": "#1A1526",
+    "editor.background": "#201A2F",
+    "activityBar.background": "#201A2F",
+    "statusBar.background": "#201A2F",
+    "sideBar.background": "#201A2F",
+    "tab.inactiveBackground": "#201A2F",
+    "tab.border": "#201A2F",
+    "editorOverviewRuler.border": "#201A2F",
+    "editorGroupHeader.tabsBackground": "#201A2F",
+    "menu.background": "#201A2F",
+    "input.background": "#201A2F",
+    "editorSuggestWidget.background": "#201A2F",
+    "editorSuggestWidget.border": "#201A2F",
+    "scrollbar.shadow": "#201A2F",
+    "scrollbarSlider.background": "#201A2F",
+    "scrollbarSlider.activeBackground": "#201A2F",
+    "scrollbarSlider.hoverBackground": "#201A2F",
+    "titleBar.activeBackground": "#201A2F",
+    "editorSuggestWidget.selectedBackground": "#201A2F",
+    "quickInput.background": "#201A2F",
     "editor.selectionBackground": "#110e18",
     "editor.lineHighlightBackground": "#110e18",
     "editorHoverWidget.background": "#110e18",
