--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -63,7 +63,7 @@ dwindle {
 }
 
 master {
-    mfact = 0.48
+    mfact = 0.50
     special_scale_factor = 1.0
 }
 
@@ -77,14 +77,14 @@ misc {
 
 decoration {
     rounding = 10
-    active_opacity = 0.95
-    inactive_opacity = 0.95
-    fullscreen_opacity = 1.0
+    active_opacity = 0.94
+    inactive_opacity = 0.94
+    fullscreen_opacity = 1
 
     blur {
         enabled = true
         size = 1
-        passes = 4
+        passes = 2
         new_optimizations = on
         ignore_opacity = true
         xray = true
@@ -124,12 +124,11 @@ windowrulev2 = suppressevent maximize, class:.*
 
 # Float Windows
 windowrulev2=float,class:^(blueman-manager)$
-windowrulev2=opacity 1.0,class:^(blueman-manager)$
 windowrulev2=float,class:^(org.pulseaudio.pavucontrol)$
-windowrulev2=opacity 1.0,class:^(org.pulseaudio.pavucontrol)$
 windowrulev2=float,title:^(Picture-in-Picture)$
-windowrulev2 = float, title:^(Open Files|Save File)$
-windowrulev2 = center, title:^(Open Files|Save File)$
+windowrulev2=float,title:^(Open Files|Open File|Save File)$
+windowrulev2=center,title:^(Open Files|Open File|Save File)$
+# windowrulev2=opacity 1.0 override 1.0 override 1.0 override,class:^(vivaldi-stable)$
 
 # Ignore borders when screenshots etc
 layerrule=noanim, selection
