--- a/mako/config
+++ b/mako/config
@@ -1,14 +1,14 @@
 max-visible=2
 layer=overlay
-background-color=#1A1526
-font=Funnel Sans 12
-text-color=#DFFFF8
+background-color=#201A2F
+font=Funnel Sans 11
+text-color=#EDEEFA
 border-color=#FFCCDD
 border-radius=12
-max-icon-size=48
+max-icon-size=46
 default-timeout=5000
 anchor=top-right
 margin=6
 width=240
-height=160
+height=140
 padding=6
