--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -77,14 +77,14 @@ misc {
 
 decoration {
     rounding = 10
-    active_opacity = 0.94
-    inactive_opacity = 0.94
+    active_opacity = 1
+    inactive_opacity = 1
     fullscreen_opacity = 1
 
     blur {
         enabled = true
-        size = 1
-        passes = 2
+        size = 2
+        passes = 3
         new_optimizations = on
         ignore_opacity = true
         xray = true
@@ -125,7 +125,7 @@ windowrulev2 = suppressevent maximize, class:.*
 # Float Windows
 windowrulev2=float,class:^(blueman-manager)$
 windowrulev2=float,class:^(org.pulseaudio.pavucontrol)$
-windowrulev2=float,title:^(Picture-in-Picture)$
+windowrulev2=float,title:^(Picture in picture)$
 windowrulev2=float,title:^(Open Files|Open File|Save File)$
 windowrulev2=center,title:^(Open Files|Open File|Save File)$
 # windowrulev2=opacity 1.0 override 1.0 override 1.0 override,class:^(vivaldi-stable)$
