--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -5,7 +5,7 @@ binds {
      allow_workspace_cycles = 0
 }
 
-bind = CTRL, RETURN, exec, wezterm
+bind = CTRL, RETURN, exec, kitty
 bind = $mainMod, Q, killactive
 bind = $mainMod SHIFT, Q, exit
 bind = CTRL, SPACE, exec, wofi --show drun -I --width 28% --no-actions --prompt ""
@@ -14,6 +14,8 @@ bind = $mainMod, F, fullscreen
 bind = $mainMod, SPACE, togglefloating
 bind = $mainMod SHIFT, U, exec, ~/.config/waybar/scripts/toggle_waybar.sh
 
+bind = $mainMod, B, exec, blueman-manager
+bind = $mainMod, P, exec, pavucontrol
 bind=,XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -3%
 bind=,XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +3%
 bind=,XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
