--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,12 +1,14 @@
-font_family Zed Mono
-font_size 8
+font_family ZedMono Nerd Font
+font_size 10
 disable_ligatures never
-foreground #FCEDF5
-background #1A0E20
+foreground #EDEEFA
+#DFFFF8
+#EDEEFA
+#FF338F
+background #1F1A2C
+#221124
+#1F1A2C
+#161320
+cursor #D7AFFF
 window_padding_width 2
-/#1A0E20
-/#161320
-/#0f1a1f
-/#18152b
 map kitty_mod+t launch --cwd=current --type=tab
-symbol_map U+E0A0-U+E0A2 Symbols Nerd Font Mono
