--- a/btop/btop.conf
+++ b/btop/btop.conf
@@ -1,8 +1,8 @@
-#? Config file for btop v. 1.4.4
+#? Config file for btop v. 1.4.5
 
 #* Name of a btop++/bpytop/bashtop formatted ".theme" file, "Default" and "TTY" for builtin themes.
 #* Themes should be placed in "../share/btop/themes" relative to binary or "$HOME/.config/btop/themes"
-color_theme = "/usr/share/btop/themes/flat-remix.theme"
+color_theme = "/home/lemonaid/.config/btop/themes/minimal.theme"
 
 #* If the theme set background should be shown, set to False if you want terminal background transparency.
 theme_background = True
@@ -18,21 +18,21 @@ force_tty = False
 #* Format: "box_name:P:G,box_name:P:G" P=(0 or 1) for alternate positions, G=graph symbol to use for box.
 #* Use whitespace " " as separator between different presets.
 #* Example: "cpu:0:default,mem:0:tty,proc:1:default cpu:0:braille,proc:0:tty"
-presets = "cpu:1:default,proc:0:default cpu:0:default,mem:0:default,net:0:default cpu:0:block,net:0:tty"
+presets = "cpu:0:default,mem:0:default gpu0:1:default,proc:1:default"
 
 #* Set to True to enable "h,j,k,l,g,G" keys for directional control in lists.
 #* Conflicting keys for h:"help" and k:"kill" is accessible while holding shift.
 vim_keys = False
 
 #* Rounded corners on boxes, is ignored if TTY mode is ON.
-rounded_corners = True
+rounded_corners = False
 
 #* Default symbols to use for graph creation, "braille", "block" or "tty".
 #* "braille" offers the highest resolution but might not be included in all fonts.
 #* "block" has half the resolution of braille but uses more common characters.
 #* "tty" uses only 3 different symbols but will work with most fonts and should work in a real TTY.
 #* Note that "tty" only has half the horizontal resolution of the other two, so will show a shorter historical view.
-graph_symbol = "braille"
+graph_symbol = "block"
 
 # Graph symbol to use for graphs in cpu box, "default", "braille", "block" or "tty".
 graph_symbol_cpu = "default"
@@ -69,22 +69,22 @@ proc_tree = False
 proc_colors = True
 
 #* Use a darkening gradient in the process list.
-proc_gradient = True
+proc_gradient = False
 
 #* If process cpu usage should be of the core it's running on or usage of the total available cpu power.
 proc_per_core = False
 
 #* Show process memory as bytes instead of percent.
-proc_mem_bytes = True
+proc_mem_bytes = False
 
 #* Show cpu graph for each process.
-proc_cpu_graphs = True
+proc_cpu_graphs = False
 
 #* Use /proc/[pid]/smaps for memory information in the process info box (very slow but more accurate)
 proc_info_smaps = False
 
 #* Show proc box on left side of screen instead of right.
-proc_left = False
+proc_left = True
 
 #* (Linux) Filter processes tied to the Linux kernel(similar behavior to htop).
 proc_filter_kernel = False
@@ -101,7 +101,7 @@ cpu_graph_upper = "Auto"
 cpu_graph_lower = "Auto"
 
 #* If gpu info should be shown in the cpu box. Available values = "Auto", "On" and "Off".
-show_gpu_info = "Auto"
+show_gpu_info = "On"
 
 #* Toggles if the lower CPU graph should be inverted.
 cpu_invert_lower = True
@@ -113,7 +113,10 @@ cpu_single_graph = False
 cpu_bottom = False
 
 #* Shows the system uptime in the CPU box.
-show_uptime = True
+show_uptime = False
+
+#* Shows the CPU package current power consumption in watts. Requires running `make setcap` or `make setuid` or running with sudo.
+show_cpu_watts = True
 
 #* Show cpu temperature.
 check_temp = True
@@ -141,7 +144,7 @@ show_cpu_freq = True
 
 #* Draw a clock at top of screen, formatting according to strftime, empty string to disable.
 #* Special formatting: /host = hostname | /user = username | /uptime = system uptime
-clock_format = "%X"
+clock_format = ""
 
 #* Update main ui in background when menus are showing, set this to false if the menus is flickering too much for comfort.
 background_update = True
@@ -163,13 +166,13 @@ mem_below_net = False
 zfs_arc_cached = True
 
 #* If swap memory should be shown in memory box.
-show_swap = True
+show_swap = False
 
 #* Show swap as a disk, ignores show_swap value above, inserts itself after first disk.
-swap_disk = True
+swap_disk = False
 
 #* If mem box should be split to also show disks info.
-show_disks = True
+show_disks = False
 
 #* Filter out non physical disks. Set this to False to include network disks, RAM disks and similar.
 only_physical = True
@@ -187,7 +190,7 @@ disk_free_priv = False
 show_io_stat = True
 
 #* Toggles io mode for disks, showing big graphs for disk read/write speeds.
-io_mode = False
+io_mode = True
 
 #* Set to True to show combined read/write io graphs in io mode.
 io_graph_combined = False
@@ -214,7 +217,7 @@ net_iface = ""
 base_10_bitrate = "Auto"
 
 #* Show battery stats in top right if battery is present.
-show_battery = True
+show_battery = False
 
 #* Which battery to use if multiple are present. "Auto" for auto detection.
 selected_battery = "Auto"
