--- a/mako/config
+++ b/mako/config
@@ -1,6 +1,6 @@
 max-visible=2
 layer=overlay
-background-color=#201A2F
+background-color=#1F1A2C
 font=Funnel Sans 11
 text-color=#EDEEFA
 border-color=#FFCCDD
