--- a/Cursor/User/settings.json
+++ b/Cursor/User/settings.json
@@ -2,8 +2,8 @@
   "window.zoomLevel": 0,
   "editor.fontFamily": "Zed Sans",
   "terminal.integrated.fontFamily": "ZedMono Nerd Font",
-  "editor.fontSize": 13,
-  "terminal.integrated.fontSize": 13,
+  "editor.fontSize": 12.5,
+  "terminal.integrated.fontSize": 12.5,
   "editor.fontLigatures": true,
   "editor.inlineSuggest.enabled": true,
   "extensions.ignoreRecommendations": true,
@@ -113,10 +113,6 @@
     "editorSuggestWidget.selectedForeground": "#6a6367",
     "tab.inactiveForeground": "#6a6367"
   },
-  "kilo-code.allowedCommands": [
-    "git log",
-    "git diff",
-    "git show"
-  ],
-  "kilo-code.deniedCommands": []
+  "json.schemaDownload.enable": true,
+  "workbench.statusBar.visible": false
 }
