chore: enable ICP sockets for yazi

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,14 +1,44 @@
-font_family ZedMono Nerd Font
-font_size 10
+font_family      Zed Mono Extended
+font_size        13
 disable_ligatures never
-foreground #EDEEFA
-#DFFFF8
-#EDEEFA
-#FF338F
-background #1F1A2C
-#221124
-#1F1A2C
-#161320
-cursor #D7AFFF
+background  #201A2F
+#201A2F
+#1A0E20
+#121124
+#120F24
+foreground #FFF7F9
+# FFF7F9
+# DFFFF8
+# FF91C3
+cursor  #D7AFFF
+cursor_shape          underline
+cursor_blink_interval 0
+shell_integration   enabled no-cursor
+
 window_padding_width 2
-map kitty_mod+t launch --cwd=current --type=tab
+background_opacity    0.9
+background_blur       20
+
+tab_bar_edge        top
+tab_bar_style       powerline
+tab_powerline_style slanted
+tab_title_template  "{index}: {title}"
+
+copy_on_select      clipboard
+strip_trailing_spaces smart
+
+repaint_delay       6
+input_delay         1
+sync_to_monitor     yes
+
+allow_remote_control    socket-only
+listen_on               unix:/tmp/kitty-socket
+
+map cmd+backspace send_text all \x15
+map cmd+c send_text all \x03
+map cmd+t       new_tab_with_cwd
+map cmd+w       close_tab
+map cmd+1       goto_tab 1
+map cmd+2       goto_tab 2
+map cmd+3       goto_tab 3
+map cmd+4       goto_tab 4
