styles: better tabs

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -16,13 +16,25 @@ cursor_blink_interval 0
 shell_integration   enabled no-cursor
 
 window_padding_width 2
-background_opacity    0.9
+background_opacity    0.95
 background_blur       20
 
+macos_show_window_title_in none
+macos_titlebar_color  background
+macos_option_as_alt   yes
+macos_quit_when_last_window_closed yes
+
 tab_bar_edge        top
-tab_bar_style       powerline
-tab_powerline_style slanted
-tab_title_template  "{index}: {title}"
+tab_bar_style       fade
+tab_bar_align       left
+tab_title_template  "{title}"
+
+active_tab_foreground    #201A2F
+active_tab_background    #D7AFFF
+inactive_tab_foreground  #FFF7F9
+inactive_tab_background  #201A2F
+tab_bar_margin_width     0
+tab_bar_min_tabs         2
 
 copy_on_select      clipboard
 strip_trailing_spaces smart
