--- a/Cursor/User/settings.json
+++ b/Cursor/User/settings.json
@@ -2,9 +2,13 @@
   "window.zoomLevel": 0,
   "editor.fontFamily": "Zed Sans",
   "terminal.integrated.fontFamily": "ZedMono Nerd Font",
-  "editor.fontSize": 12.5,
-  "terminal.integrated.fontSize": 12.5,
+  "editor.fontSize": 13,
+  "terminal.integrated.fontSize": 13,
   "editor.fontLigatures": true,
+  "terminal.external.osxExec": "/Applications/kitty.app",
+  "terminal.external.linuxExec": "kitty",
+  "terminal.integrated.scrollback": 50000,
+  "terminal.integrated.cursorStyle": "underline",
   "editor.inlineSuggest.enabled": true,
   "extensions.ignoreRecommendations": true,
   "search.exclude": {
@@ -20,6 +24,8 @@
     "**/*.cjs": true,
     "**/*.svg": true,
     "**-lock.yaml": true,
+    "**/cache": true,
+    "**/.cache": true
   },
   "eslint.format.enable": true,
   "editor.formatOnSave": true,
@@ -65,7 +71,6 @@
   "editor.tabSize": 2,
   "editor.cursorStyle": "line-thin",
   "editor.cursorBlinking": "solid",
-  "terminal.integrated.cursorStyle": "underline",
   "git.decorations.enabled": false,
   "workbench.editor.decorations.badges": false,
   "workbench.editor.decorations.colors": false,
@@ -83,7 +88,8 @@
   "diffEditor.renderSideBySide": true,
   "workbench.activityBar.location": "hidden",
   "workbench.sideBar.location": "right",
-  "terminal.integrated.scrollback": 50000,
+  "json.schemaDownload.enable": true,
+  "workbench.statusBar.visible": false,
   "workbench.startupEditor": "none",
   "diffEditor.useInlineViewWhenSpaceIsLimited": false,
   "workbench.colorTheme": "Tomorrow Night Blue",
@@ -107,12 +113,10 @@
     "titleBar.activeBackground": "#201A2F",
     "editorSuggestWidget.selectedBackground": "#201A2F",
     "quickInput.background": "#201A2F",
-    "editor.selectionBackground": "#110e18",
-    "editor.lineHighlightBackground": "#110e18",
-    "editorHoverWidget.background": "#110e18",
+    "editor.selectionBackground": "#181227",
+    "editor.lineHighlightBackground": "#181227",
+    "editorHoverWidget.background": "#181227",
     "editorSuggestWidget.selectedForeground": "#6a6367",
     "tab.inactiveForeground": "#6a6367"
-  },
-  "json.schemaDownload.enable": true,
-  "workbench.statusBar.visible": false
+  }
 }
