chore: update configuration colors and settings

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,22 +1,25 @@
 font_family      Zed Mono Extended
 font_size        13
 disable_ligatures never
-background  #201A2F
+background  #180A25
 #201A2F
 #1A0E20
 #121124
-#120F24
+#0F0F1A
+#180A25
 foreground #FFF7F9
 # FFF7F9
 # DFFFF8
 # FF91C3
-cursor  #D7AFFF
+# FF4797
+# DCBAFF
+cursor  #DCBAFF
 cursor_shape          underline
 cursor_blink_interval 0
 shell_integration   enabled no-cursor
 
 window_padding_width 2
-background_opacity    0.95
+background_opacity    1
 background_blur       20
 
 macos_show_window_title_in none
@@ -29,10 +32,10 @@ tab_bar_style       fade
 tab_bar_align       left
 tab_title_template  "{title}"
 
-active_tab_foreground    #201A2F
-active_tab_background    #D7AFFF
+active_tab_foreground    #180A25
+active_tab_background #DCBAFF
 inactive_tab_foreground  #FFF7F9
-inactive_tab_background  #201A2F
+inactive_tab_background  #180A25
 tab_bar_margin_width     0
 tab_bar_min_tabs         2
 
