--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,19 +1,20 @@
-font_family      Zed Mono Extended
+font_family      Zed Mono
 font_size        13
 disable_ligatures never
-background  #180A25
-#201A2F
-#1A0E20
+background  #221727
+#221727
 #121124
-#0F0F1A
-#180A25
-foreground #FFF7F9
-# FFF7F9
-# DFFFF8
-# FF91C3
-# FF4797
-# DCBAFF
-cursor  #DCBAFF
+#0f0f1a
+#201a2f
+#eee9ff
+foreground #eee9ff
+#ffeef2
+#dffff8
+#ff91c3
+#ff4797
+#cfaaf3
+#98e4a7
+cursor  #eee9ff
 cursor_shape          underline
 cursor_blink_interval 0
 shell_integration   enabled no-cursor
@@ -32,10 +33,10 @@ tab_bar_style       fade
 tab_bar_align       left
 tab_title_template  "{title}"
 
-active_tab_foreground    #180A25
-active_tab_background #DCBAFF
-inactive_tab_foreground  #FFF7F9
-inactive_tab_background  #180A25
+active_tab_foreground    #221727
+active_tab_background #cfaaf3
+inactive_tab_foreground  #eee9ff
+inactive_tab_background  #221727
 tab_bar_margin_width     0
 tab_bar_min_tabs         2
 
